--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.modal{
+  color: red;
+  height: 60px;
+  width: 60px;
+
+}
